--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@angular/core": "2.2.3",
     "@angular/forms": "2.2.3",
     "@angular/http": "2.2.3",
+    "@angular/material": "^2.0.0-beta.1",
     "@angular/platform-browser": "2.2.3",
     "@angular/platform-browser-dynamic": "2.2.3",
     "@angular/router": "3.2.3",
     "core-js": "^2.4.1",
+    "kute.js": "^1.6.0",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
