--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "2.2.3",
     "@angular/router": "3.2.3",
     "core-js": "^2.4.1",
+    "dragula": "^3.7.2",
     "kute.js": "^1.6.0",
+    "ng2-dragula": "^1.2.2",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
