--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "2.2.3",
     "@angular/platform-browser-dynamic": "2.2.3",
     "@angular/router": "3.2.3",
+    "angular2-color-picker": "^1.3.0",
     "core-js": "^2.4.1",
     "dragula": "^3.7.2",
     "kute.js": "^1.6.1",
