--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular2-color-picker": "^1.3.0",
     "core-js": "^2.4.1",
     "dragula": "^3.7.2",
+    "file-saver": "^1.3.3",
     "kute.js": "^1.6.1",
     "ng2-dragula": "^1.2.2",
     "rxjs": "5.0.0-beta.12",
