--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "deploy": "ng github-pages:deploy --base-href=/"
   },
   "private": true,
   "dependencies": {
