--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
-    "deploy": "ng github-pages:deploy --base-href=/"
+    "deploy": "ng github-pages:deploy --base-href='/'"
   },
   "private": true,
   "dependencies": {
